--- a/my-react-app/src/Homepage/homepage.module.css
+++ b/my-react-app/src/Homepage/homepage.module.css
@@ -1,31 +1,54 @@
-/* homepage.css */
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Jura', sans-serif;
-    background-color: white; /* Set background color to white */
-  }
   
   .container {
     display: flex;
+    margin: 1000px;
+    padding: 1000px;
+    font-family: 'Jura', sans-serif;
+    background-color: white;
   }
   
-  .sidebar {
-    width: 200px;
-    height: 100vh;
-    background-color: purple;
-    color: white;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    
+  .filterSection {
+    margin-top: 10px;
+    padding-left: 10px; /* Adjust this value to move the text to the right */
   }
+  
+  
+  .filterSection h2 {
+    color: white;
+}
+
+  .sidebar {
+    height: 100%;
+    width: 230px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: purple;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  .sidebar a {
+    padding: 6px 6px 6px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+  
   
   .title {
     font-size: 2rem;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    color: white;
   }
   
   .logo {
