Centered penguin icon

--- a/my-react-app/src/Homepage/homepage.module.css
+++ b/my-react-app/src/Homepage/homepage.module.css
@@ -52,7 +52,12 @@
   }
   
   .logo {
-    opacity: 0.5;
+    mix-blend-mode: multiply;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
   }
   
   .filterSection {
