--- a/my-react-app/src/Homepage/homepage.module.css
+++ b/my-react-app/src/Homepage/homepage.module.css
@@ -1,114 +1,134 @@
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&display=swap');
 
-  
-  .container {
-    display: flex;
-    margin: 1000px;
-    padding: 1000px;
-    font-family: 'Jura', sans-serif;
-    background-color: white;
-  }
-  
-  .filterSection {
-    margin-top: 10px;
-    padding-left: 10px; /* Adjust this value to move the text to the right */
-  }
-  
-  
-  .filterSection h2 {
-    color: white;
+.container {
+  display: flex;
+  font-family: 'Jura', sans-serif;
+  background-color: white;
+  width: 100%;
+  height: 100%;
 }
 
-  .sidebar {
-    height: 100%;
-    width: 230px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #8860D0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  .sidebar a {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-  
-  .sidebar a:hover {
-    color: #f1f1f1;
-  }
-  
-  
-  .title {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 10px;
-    color: white;
-  }
-  
-  .logo {
-    mix-blend-mode: multiply;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+.sidebar {
+  height: 100%;
+  width: 230px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #8860D0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
 
-  }
-  
-  .filterSection {
-    margin-top: 10px;
-  }
-  
-  label {
-    display: block;
-    margin-top: 10px;
-    color: white; /* Set text color to white */
-  }
-  
-  input[type="checkbox"] {
-    margin-right: 5px;
-  }
-  
-  .content {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .centeredContainer {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: -380px; /* Adjust the value to add space between the search bar and other content */
-    margin-left: -570px; /* Add left margin to move it over to the left */
-  }
-  
-  
-  .searchBar {
-    display: flex;
-    align-items: center;
-    border: 2px solid black;
-    border-radius: 40px; /* Adjust the value to change the roundness of the search bar */
-    padding: 5px 10px; /* Adjust the values to increase/decrease padding inside the search bar */
-  }
-  
-  .searchBar input {
-    flex: 1;
-    border: none;
-    outline: none;
-    padding: 5px;
-    font-family: 'Jura', sans-serif;
-  }
-  
-  .searchBar button {
-    background-color: transparent;
-    border: none;
-    color: black;
-    font-size: 1rem; /* Adjust the value to change the size of the button */
-    margin-left: 300px; /* Adjust the value to add space between the input and the button */
-    cursor: pointer;
-  }
-  
+.sidebar a {
+  padding: 6px 6px 6px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+
+.filterSection {
+  margin-top: 10px;
+  padding-left: 10px; /* Adjust this value to move the text to the right */
+}
+
+.filterSection h2 {
+  color: white;
+}
+
+.homePagetitle {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.homePageLogo {
+  mix-blend-mode: multiply;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+  color: white; /* Set text color to white */
+}
+
+input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+
+.content {
+  flex: 1;
+  padding: 20px;
+  margin-left: 230px; /* Align content to the right of the sidebar */
+}
+
+.centeredContainer {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 20px; 
+}
+
+.searchBar {
+  display: flex; /* Enables flexbox layout */
+  align-items: center; /* Centers items vertically */
+  border: 2px solid black; 
+  border-radius: 40px; /* Adjusts the roundness of the search bar */
+  padding: 5px 10px; /* Adjusts the padding inside the search bar */
+  position: relative; 
+  width: 380px; /* Adjust this value to set the width of the search bar */
+  margin: 0 auto; /* Centers the search bar within its container */
+  top: 5px;
+  left: -500px;
+}
+
+
+.searchBar input {
+  flex-grow: 1;
+  flex-shrink: 0; 
+  flex-basis: 70%; /* Sets the initial length of the input */
+  border: none; 
+  outline: none;
+  padding: 5px; /* Adjusts the padding inside the input field */
+  font-family: 'Jura', sans-serif;
+}
+
+.searchBar button {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1rem; /* Adjust the value to change the size of the button */
+  cursor: pointer;
+  position: absolute; /* Position the button absolutely */
+  right: 10px; /* Adjust the value to position the button from the right edge */
+}
+
+
+.uploadButton {
+  background-color: #84CEEB; 
+  border: none;
+  color: white;
+  font-size: large;
+  margin-left: 800px;
+  padding: 20px 45px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: 'Jura', sans-serif;
+}
+
+.uploadButton:hover {
+  background-color: #5680E9; 
+}
+
+
+
