--- a/my-react-app/src/Homepage/uploadModal.module.css
+++ b/my-react-app/src/Homepage/uploadModal.module.css
@@ -1,4 +1,3 @@
-/* uploadModal.module.css */
 
 .modalOverlay {
   position: fixed;
@@ -46,7 +45,7 @@
   padding: 10px;
 }
 
-.modalActionButton {
+.modalNextButton {
   background-color:  #84CEEB; /* Light blue background */
   color: white;
   border: none;
@@ -56,17 +55,33 @@
   margin-left: 450px;
 }
 
-.modalBackButton {
+.modalUploadButton {
   background-color:  #84CEEB; /* Light blue background */
   color: white;
   border: none;
   padding: 10px 20px;
   font-size: 1rem;
   cursor: pointer;
-  margin-left: 50px;
+  margin-left: 500px;
 }
 
-.modalActionButton:hover {
+.backButton {
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  width: 40px; 
+  height: 40px;
+  font-size: 1.5rem; 
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.backButton:hover {
+  background-color: #5680E9; /* Darker blue on hover */
+}
+
+.modalNextButton:hover {
   background-color: #5680E9; /* Gradient dark purple */
 }
 
@@ -100,26 +115,34 @@
   border-color: #5680E9; /* Border color when dragged over */
 }
 
-.titleInput {
+
+.titleInput, .descriptionTextarea, .uploadMediaTypeSelect {
   width: 100%;
   margin-bottom: 10px;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
-  font-family: arial;
+  font-family: Arial;
 }
 
-.descriptionTextarea {
-  width: 100%;
-  height: 100px;
-  margin-bottom: 10px;
+
+.titleInput:focus,
+.descriptionTextarea:focus,
+.uploadMediaTypeSelect:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.uploadMediaTypeSelect option {
   padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
   font-size: 16px;
-  font-family: arial;
-  ;
+  font-family: Arial, sans-serif;
+  background-color: white;
+}
+
+.mediaTypeSelect:focus {
+  cursor: pointer;
 }
 
 .backButton {
@@ -127,9 +150,21 @@
 }
 
 .uploadIcon {
-  width: 70px; /* Adjust the width of the upload icon */
-  height: auto; /* Maintains aspect ratio */
+  width: 70px; 
+  height: auto; 
   margin-bottom: 10px;  
   margin-left: 90px; 
-  display: block; /* Ensures it behaves as a block element */
+  display: block; 
 }
+
+.mediaTypeSelect {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+
