--- a/my-react-app/src/ProjectPage/projectpage.module.css
+++ b/my-react-app/src/ProjectPage/projectpage.module.css
@@ -32,15 +32,6 @@
   color: #f1f1f1;
 }
 
-.filterSection {
-  margin-top: 10px;
-  padding-left: 10px; /* Adjust this value to move the text to the right */
-}
-
-.filterSection h2 {
-  color: white;
-}
-
 .homePagetitle {
   font-size: 2rem;
   text-align: center;
@@ -54,12 +45,13 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  cursor: pointer;
 }
 
 label {
   display: block;
   margin-top: 10px;
-  color: white; /* Set text color to white */
+  color: black;
 }
 
 input[type="checkbox"] {
@@ -77,34 +69,24 @@ input[type="checkbox"] {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #8860D0;
 }
 
 .searchBar {
-  display: flex; /* Enables flexbox layout */
-  align-items: center; /* Centers items vertically */
+  display: flex; 
+  align-items: center;
   border: 2px solid black; 
-  border-radius: 40px; /* Adjusts the roundness of the search bar */
-  padding: 5px 10px; /* Adjusts the padding inside the search bar */
+  border-radius: 40px; 
+  padding: 5px 10px; 
   position: relative; 
-  width: 100%; /* Adjust this value to set the width of the search bar */
+  width: 100%; 
   max-width: 600px;
-  /*
-  margin: 0 auto;
-  top: 5px;
-  left: -500px;
-  */
 }
 
 .searchBar input {
   flex-grow: 1;
-  /*
-  flex-shrink: 0; 
-  flex-basis: 70%;
-  */
   border: none; 
   outline: none;
-  padding: 10px; /* Adjusts the padding inside the input field */
+  padding: 10px; 
   font-family: 'Jura', sans-serif;
 }
 
@@ -112,10 +94,10 @@ input[type="checkbox"] {
   background-color: transparent;
   border: none;
   color: #8860D0;
-  font-size: 1.2rem; /* Adjust the value to change the size of the button */
+  font-size: 1.2rem; 
   cursor: pointer;
-  position: absolute; /* Position the button absolutely */
-  right: 10px; /* Adjust the value to position the button from the right edge */
+  position: absolute; 
+  right: 10px; 
 }
 
 .signOut {
@@ -131,11 +113,12 @@ input[type="checkbox"] {
 
 .content {
   flex: 1;
-  padding: 20px;
+  padding: 30px;
   background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   position: relative;
+  margin-top: 30px;
 }
 
 .uploadButton {
@@ -231,9 +214,71 @@ input[type="checkbox"] {
   margin-top: 20px;
 }
 
+.filterModal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  transition: transform 0.3s ease;
+  transform: translateX(100%);
+}
+
+.filtersText {
+  text-align: center;
+}
+
+.filterModalOpen {
+  transform: translateX(0);
+}
+
+.filterModalContent {
+  padding: 20px;
+}
+
+.filterModalFooter {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.filterButton {
+  background-color:#fefba9  ;
+  border: none;
+  color: black;
+  font-size: large;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: 'Jura', sans-serif;
+  margin-left: 10px;
+}
+
+.filterButton:hover {
+  background-color: yellow;
+}
+
+.filterOptions {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.filterOptions label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.filterOptions input[type="checkbox"] {
+  margin-right: 5px;
+}
+
 .sortSection {
   margin-top: 20px;
-  color: white;
 }
 
 .sortSection select {
@@ -242,16 +287,14 @@ input[type="checkbox"] {
   padding: 5px;
   border-radius: 5px;
   border: none;
+  width: 100%;
+  background-color: #f9f9f9;
+  color: #333;
+  font-family: 'Jura', sans-serif;
 }
 
-.mediaName {
-  margin-top: 10px;
-  text-align: center;
+.filterIcon {
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
 }
-
-.uploadButtonContiainer {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 20px;
-}
-
