--- a/my-react-app/src/ProjectPage/projectpage.module.css
+++ b/my-react-app/src/ProjectPage/projectpage.module.css
@@ -21,7 +21,7 @@
 }
 
 .sidebar a {
-  padding: 6px 6px 6px 32px;
+  padding: 0px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -34,7 +34,7 @@
 
 .filterSection {
   margin-top: 10px;
-  padding-left: 10px; /* Adjust this value to move the text to the right */
+  padding-left: 10px;
 }
 
 .filterSection h2 {
@@ -46,6 +46,7 @@
   text-align: center;
   margin-bottom: 10px;
   color: white;
+  cursor: pointer;
 }
 
 .homePageLogo {
@@ -53,13 +54,14 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  height: 50px;
+  width: 50px;
 }
 
 label {
   display: block;
   margin-top: 10px;
-  color: white; /* Set text color to white */
+  color: white;
 }
 
 input[type="checkbox"] {
@@ -81,41 +83,41 @@ input[type="checkbox"] {
 }
 
 .searchBar {
-  display: flex; /* Enables flexbox layout */
-  align-items: center; /* Centers items vertically */
-  border: 2px solid black; 
-  border-radius: 40px; /* Adjusts the roundness of the search bar */
-  padding: 5px 10px; /* Adjusts the padding inside the search bar */
+  display: flex; 
+  align-items: center; 
+  border: solid white;
+  border-radius: 40px;
+  padding: 5px 10px; 
   position: relative; 
-  width: 100%; /* Adjust this value to set the width of the search bar */
+  width: 100%;
   max-width: 600px;
-  /*
-  margin: 0 auto;
-  top: 5px;
-  left: -500px;
-  */
+  background-color: white;
 }
 
 .searchBar input {
   flex-grow: 1;
-  /*
-  flex-shrink: 0; 
-  flex-basis: 70%;
-  */
   border: none; 
   outline: none;
-  padding: 10px; /* Adjusts the padding inside the input field */
+  padding: 10px;
   font-family: 'Jura', sans-serif;
+}
+
+.searchTypeDropdown {
+  padding: 10px;
+  border-radius: 20px;
+  border: solid white;
+  background-color: #46beed;
+  font-family: 'Jura', sans-serif;
+  margin-right: 10px;
+  color: white;
 }
 
 .searchBar button {
   background-color: transparent;
   border: none;
   color: #8860D0;
-  font-size: 1.2rem; /* Adjust the value to change the size of the button */
+  font-size: 1.2rem;
   cursor: pointer;
-  position: absolute; /* Position the button absolutely */
-  right: 10px; /* Adjust the value to position the button from the right edge */
 }
 
 .signOut {
@@ -139,7 +141,7 @@ input[type="checkbox"] {
 }
 
 .uploadButton {
-  background-color: #84CEEB; 
+  background-color: #46beed; 
   border: none;
   color: white;
   font-size: large;
@@ -156,7 +158,7 @@ input[type="checkbox"] {
 }
 
 .uploadButtonRight {
-  background-color: #84CEEB; 
+  background-color: #46beed; 
   border: none;
   color: white;
   font-size: large;
